Modificando algunos campos del modelo y form de Task. Y cambiando algunos detalles del estilo del dashboard

--- a/tasks/templates/base.html
+++ b/tasks/templates/base.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
+    {% load static %}
     <title>TaskForge</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="{% static 'tasks/css/styles.css' %}">
     <style>
         body {
             background: url('/static/tasks/sky_light_wallpaper.jpg') no-repeat center center fixed;
