--- a/tasks/templates/tasks/dashboard.html
+++ b/tasks/templates/tasks/dashboard.html
@@ -2,7 +2,8 @@
 {% block content %}
     <h2 class="text-3xl font-bold mb-6 text-center">Mis Tareas</h2>
     <div class="mb-6 text-center">
-        <a href="{% url 'create_task' %}" class="bg-white text-purple-900 p-2 rounded-full inline-block">Crear Nueva Tarea</a>
+        <a href="{% url 'create_task' %}" class="bg-white text-purple-900 p-2 rounded-full inline-block mr-2">Crear Nueva Tarea</a>
+        <a href="{% url 'create_tag' %}" class="bg-white text-purple-900 p-2 rounded-full inline-block">Crear Nueva Categoría</a>
     </div>
     <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
         {% for task in tasks %}
@@ -11,6 +12,11 @@
                 <p class="text-gray-200">{{ task.description }}</p>
                 <p class="text-sm text-gray-400">Estado: {{ task.status }}</p>
                 <p class="text-sm text-gray-400">Vence: {{ task.due_date|date:"F d, Y" }}</p>
+                <p class="text-sm text-gray-400">Categorías:
+                    {% for tag in task.tags.all %}
+                        {{ tag.name }}{% if not forloop.last %}, {% endif %}
+                    {% endfor %}
+                </p>
                 <div class="mt-2">
                     <a href="{% url 'edit_task' task.id %}" class="text-blue-200 mr-2">Editar</a>
                     <a href="{% url 'delete_task' task.id %}" class="text-red-200">Eliminar</a>
@@ -20,5 +26,4 @@
             <p class="text-center text-gray-200">No hay tareas.</p>
         {% endfor %}
     </div>
-    
 {% endblock %}
