--- a/tasks/templates/base.html
+++ b/tasks/templates/base.html
@@ -5,6 +5,7 @@
     <title>TaskForge</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'tasks/css/styles.css' %}">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
         body {
             background: url('/static/tasks/sky_light_wallpaper.jpg') no-repeat center center fixed;
