Añadiendo algunos comentarios al código

--- a/tasks/templates/base.html
+++ b/tasks/templates/base.html
@@ -20,10 +20,10 @@
             border-radius: 15px;
             padding: 2rem;
             color: white;
-            /* Temporalmente quitado: border: 1px solid rgba(255, 255, 255, 0.2); */
+            /* Lo quité temporalmente : border: 1px solid rgba(255, 255, 255, 0.2); */
         }
         nav {
-            background-color: #060126; /* Nuevo color azul oscuro personalizado */
+            background-color: #060126; /* Azul oscuro que combina con el background*/
         }
     </style>
 </head>
